Fixed navbar width issue on narrow screen

--- a/Gilbert/src/main/resources/static/main.css
+++ b/Gilbert/src/main/resources/static/main.css
@@ -78,9 +78,8 @@ body {
         color: var(--text);
     }
 
-    & a img, a svg {
+    & a svg {
         height: 100%;
-        width: 40px;
         aspect-ratio: 1;
     }
 }
